# blog-api

./: .dockerignore  Cargo.toml  README.md  Rocket.toml
assets/: config.yaml  postgres-template.yaml
migrations/2020-02-17-193328_posts/: up.sql
migrations/2020-02-17-231108_alter_posts/: down.sql  up.sql
migrations/2020-02-20-212440_updated_at/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/: types.rs
src/http/: catchers.rs  mod.rs  routes.rs
