[package]
name = "blog-api"
version = "0.1.0"
authors = ["Victor Palade <victor@cloudflavor.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = {version = "0.4", features = ["diesel_postgres_pool"]}
tokio = {version = "0.2", features = ["full"]}
serde = "1.0"
serde_derive = "1.0"
clap = "2.33"
futures = "0.3"
config = "0.10"
env_logger = "0.7"
log = "0.4"
diesel = {version = "1.4.3", features = ["postgres"]}
diesel_migrations = "1.4.0"


