[package]
name = "blog-api"
version = "0.1.0"
authors = ["Victor Palade <victor@cloudflavor.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
serde = "1.0"
serde_derive = "1.0"
clap = "2.33"
log = "0.4"
diesel = {version = "1.4.3", features = ["postgres", "chrono"]}
diesel_migrations = "1.4.0"
chrono = { version = "0.4.10", features = ["serde"]}

[dependencies.rocket_contrib]
version = "0.4" 
default_features = false
features = ["diesel_postgres_pool", "json"]
